--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="assets/images/logo.svg" alt="logo" />
-        <img src="assets/images/icon-menu.svg" alt="menu" class="show">
-        <img src="assets/images/icon-menu-close.svg" alt="menu" class="close menu">
+        <img src="logo.svg" alt="logo" />
+        <img src="icon-menu.svg" alt="menu" class="show">
+        <img src="icon-menu-close.svg" alt="menu" class="close menu">
         <nav>
           <ul>
             <li>Home</li>
@@ -42,12 +42,12 @@
       </header>
       <main>
         <img
-          src="assets/images/image-web-3-desktop.jpg"
+          src="image-web-3-desktop.jpg"
           alt="photo"
           class="desktop-picture"
         />
         <img
-          src="assets/images/image-web-3-mobile.jpg"
+          src="image-web-3-mobile.jpg"
           alt="photo"
           class="mobile-picture"
         />
@@ -88,7 +88,7 @@
       </main>
       <div class="article">
         <article>
-          <img src="assets/images/image-retro-pcs.jpg" alt="" />
+          <img src="image-retro-pcs.jpg" alt="" />
           <div class="text">
             <span>01</span><br /><br />
             <a href="">Reviving Retro PCs</a><br /><br />
@@ -96,7 +96,7 @@
           </div>
         </article>
         <article>
-          <img src="assets/images/image-top-laptops.jpg" alt="" />
+          <img src="image-top-laptops.jpg" alt="" />
           <div class="text">
             <span>02</span><br /><br />
             <a href="">Top 10 Laptops of 2022</a><br /><br />
@@ -104,7 +104,7 @@
           </div>
         </article>
         <article>
-          <img src="assets/images/image-gaming-growth.jpg" alt="" />
+          <img src="images/image-gaming-growth.jpg" alt="" />
           <div class="text">
             <span>03</span><br /><br />
             <a href="">The Growth of Gaming</a><br /><br />
