--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="favicon-32x32.png"
     />
 
     <title>Frontend Mentor | News homepage</title>
@@ -104,7 +104,7 @@
           </div>
         </article>
         <article>
-          <img src="images/image-gaming-growth.jpg" alt="" />
+          <img src="image-gaming-growth.jpg" alt="" />
           <div class="text">
             <span>03</span><br /><br />
             <a href="">The Growth of Gaming</a><br /><br />
